Cache updated (magit/transient).

--- a/init.org
+++ b/init.org
@@ -988,6 +988,7 @@ file save). We also bound Magit to ~F8~, and integrate Git-flow
 ;; (setq vc-handled-backends (delq 'Git vc-handled-backends)) ; Remove Git from the list of backends handled by Emacs version control
 ;; (setq vc-handled-backends nil) ; Remove VC altogether
 (setq
+ transient-history-file (concat my-cache-dir "transient/history.el")
  magit-completing-read-function 'ivy-completing-read
  magit-view-git-manual-method 'man
  magit-refs-show-commit-count 'all)
